--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="#services">Services</a></li>
           <li><a href="#about">À propos</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#email">Contact</a></li>
         </ul>
       </nav>
     </div>
